Tests MockMVC, Prueba de ejecución y acceso a API